environments/quarkus-demo-dev/apps/app-quarkus-demo-app/services/quarkus-demo-app/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: quarkus-demo-app
    app.kubernetes.io/part-of: app-quarkus-demo-app
    app.openshift.io/runtime: quarkus
  name: quarkus-demo-app
  namespace: quarkus-demo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-demo-app
      app.kubernetes.io/part-of: app-quarkus-demo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: quarkus-demo-app
        app.kubernetes.io/part-of: app-quarkus-demo-app
    spec:
      containers:
      - image: quay.io/adrina/quarkus-demo-app:main-e21be11ab32ec4c5dba5fb400b8e85852c046823
        imagePullPolicy: Always
        name: quarkus-demo-app
        ports:
        - containerPort: 8080
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
      serviceAccountName: default
status: {}
