environments/quarkus-demo-dev/apps/app-quarkus-demo-app/services/quarkus-demo-app/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: quarkus-demo-app
    app.kubernetes.io/part-of: app-quarkus-demo-app
  name: quarkus-demo-app
  namespace: quarkus-demo-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-demo-app
    app.kubernetes.io/part-of: app-quarkus-demo-app
status:
  loadBalancer: {}
