environments/quarkus-demo-dev/apps/app-quarkus-demo-app/services/quarkus-demo-app/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: quarkus-demo-app
    app.kubernetes.io/part-of: app-quarkus-demo-app
  name: quarkus-demo-app
  namespace: quarkus-demo-dev
spec:
  path: /
  to:
    kind: Service
    name: quarkus-demo-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
